2002-04-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* ChangeLog: Fix dates.

2002-03-30	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* libc/rcmd.c: Replace __rtems w/ __rtems__.

2002-03-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac:
	AC_INIT(package,_RTEMS_VERSION,_RTEMS_BUGS).
	AM_INIT_AUTOMAKE([no-define foreign 1.6]).
	* arpa/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* kern/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* Makefile.am: Remove AUTOMAKE_OPTIONS.
	* lib/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* libc/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* machine/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* net/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* netinet/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* nfs/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* pppd/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* rtems/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* rtems_servers/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* rtems_telnetd/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* rtems_webserver/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* sys/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* vm/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* wrapup/Makefile.am: Remove AUTOMAKE_OPTIONS.

2002-03-27	Thomas.Doerfler@imd-systems.de

	* PR144
        * nfs/bootp_subr.c bootpc_init(): Performs a write to memory address
	0 when called for the first time. This is done when trying to clear
	the variable "dhcp_hostname".

2002-03-27      Ilya Alexeev <ilya@continuum.ru>

	* PR162
        * net/if_ppp.c ppp_txdaemon(), net/if_pppvar.h pppstart(): Local
	variables must not be used in a device write routines.  Now
	ppp_softc structure have own character for writing to device
	(sc_outchar).  I think that converting local variables to static
	is not a right solution, because problems will occur in the case
	of two or more ppp instances.
	* net/ppp_tty.c pppstart(): Type of the ioffset variable must be
	u_long, otherwise in the case of the big output packet endless
	loop may occur.

2002-03-21      Ilya Alexeev <ilya@continuum.ru>
